<resources>
    <string name="app_name">Ultimate Fitness</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="calories">Calories</string>
    <string name="add">Add</string>
    <string name="date">Date :</string>
    <string name="glasses">Glasses</string>
    <string name="add250ml">+ 250ml</string>
    <string name="Remove250ml">- 250ml</string>
    <string name="view_table">View Progress</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="add_to_table">Add to Progress</string>
    <string name="title_activity_gym_workouts">GymWorkouts</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_a_one_time_password_on_the_mobile_number">We will a One Time Password on the mobile number</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="_91">+27-</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string-array name="stepsArray">
        <item>"1000"</item>
        <item>"2500"</item>
        <item>"5000"</item>
        <item>"7500"</item>
        <item>"10000"</item>
    </string-array>
    <string name="action_debug">Debug View</string>
    <string name="steps_tracked">Steps Tracked: 0</string>
    <string name="android_steps_tracked">Android Steps Tracked: 0</string>
    <string name="placeholder_text">
        Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of
        English to emphasise design elements over content. It\'s also called placeholder (or filler) text.
        It\'s a convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation,
        eg typography, font, or layout. Lorem ipsum is mostly a part of a Latin text by the classical author and philosopher Cicero.
    </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="abs">ABS</string>
    <string name="back">BACK</string>
    <string name="biceps">BICEPS</string>
    <string name="chest">CHEST</string>
    <string name="hamstrings">HAMSTRINGS</string>
    <string name="hiit">HIIT</string>
    <string name="legs">LEGS</string>
    <string name="lower_body">LOWER BODY</string>
    <string name="shoulders">SHOULDERS</string>
    <string name="triceps">TRICEPS</string>
    <string name="upper_body">UPPER BODY</string>
    <string name="zone">Zone</string>
    <string name="ultimate_fitness">Ultimate Fitness</string>
    <string name="welcome_to_ultimate_fitness">Welcome to Ultimate Fitness</string>
    <string name="workout_name">Workout Name</string>
    <string name="_0_0">0/0</string>
    <string name="water_intake">Water Intake</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="yesterday_s_progress">Yesterday\'s Progress</string>
    <string name="okay">OKAY</string>
    <string name="this_is_your_current_phone_number">This is your current phone number</string>
    <string name="enter_new_phone_number">Enter new phone number</string>
    <string name="verify_number">Verify number</string>
    <string name="update_number">Update number</string>
</resources>