<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        android:background="@drawable/img_background"
        app:cardElevation="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/trophy"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/yesterday_s_progress"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_intake"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/txtWaterAchievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed-light"/>
            <ProgressBar
                android:id="@+id/waterDayProgress"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_consumed"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/txtCaloriesAchievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed-light"/>

            <ProgressBar
                android:id="@+id/caloriesDayProgress"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/okayAlertBtn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/okay"
                android:background="@drawable/bg_button"/>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>