<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".water.Water_Tracker_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp">


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/date"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <Button
            android:id="@+id/open_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:ems="10"
            android:padding="10dp"
            android:text="@string/open_calendar" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:ems="10"
            android:indeterminateOnly="false"
            android:padding="10dp"

            android:progressDrawable="@drawable/water_tracker_circle_progress_bar"
            tools:progress="0" />

            <TextView
                android:id="@+id/text_view_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="0"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/txtSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="50dp"
                android:text="Glasses" />

        </RelativeLayout>



        <Button
            android:id="@+id/drank_button_inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:onClick="drinkWater"
            android:padding="10dp"
            android:text="@string/_500ml" />

        <Button
            android:id="@+id/drank_button_dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:ems="10"
            android:onClick="remove_drinkWater"
            android:padding="10dp"
            android:text="@string/_Remove500ml" />

        <Button
            android:id="@+id/add_to_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:ems="10"
            android:padding="10dp"
            android:text="@string/add_to_table" />

        <Button
            android:id="@+id/view_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:ems="10"
            android:padding="10dp"
            android:text="@string/view_table" />
        <Button
            android:id="@+id/delete_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:ems="10"
            android:padding="10dp"
            android:text="@string/delete_entry" />


        <ListView
            android:id="@+id/lv_view"
            android:layout_width="match_parent"
            android:layout_height="635dp"
            android:layout_marginTop="40dp" />


    </LinearLayout>



</ScrollView>