<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workouts.WorkoutPage"
    android:background="@drawable/img_background">

    <FrameLayout
        android:id="@+id/frame_Video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <VideoView
            android:id="@+id/video_Workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/iconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white"
            android:layout_margin="20dp"
            android:onClick="goBack"
            android:background="@color/transparent"/>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_Video"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/txt_workoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/workout_name"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txt_workoutZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_workoutName"
            android:layout_alignParentStart="true"
            android:text="@string/zone"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_workoutZone"
            android:layout_marginBottom="?attr/actionBarSize">


            <TextView
                android:id="@+id/txt_workoutDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_text"
                android:textSize="14sp"
                android:paddingTop="10dp"/>
        </ScrollView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>