<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePhoneNumber">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/this_is_your_current_phone_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:ccp_defaultNameCode="ZW"
        app:ccp_showFullName="true"
        app:layout_constraintBottom_toTopOf="@+id/newNumberEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
        app:layout_constraintVertical_bias="0.696" />

    <EditText
        android:id="@+id/newNumberEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="348dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/enter_new_phone_number"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEditText"
        app:layout_constraintVertical_bias="0.132">

        <EditText
            android:id="@+id/inputCode1"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode2"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode3"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode5"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode6"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:visibility="gone"
        android:gravity="center"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEditText"
        app:layout_constraintVertical_bias="0.873">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_the_otp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textRespondOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resend_otp"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/changeEmailButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:onClick="changePhoneNumber"
        android:padding="10dp"
        android:paddingStart="-10dp"
        android:text="@string/update_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEditText"
        app:layout_constraintVertical_bias="0.851" />

    <TextView
        android:id="@+id/verifyOTPButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:onClick="verifyOTP"
        android:padding="10dp"
        android:paddingStart="-10dp"
        android:text="@string/verify_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEditText"
        app:layout_constraintVertical_bias="0.851" />

    <ProgressBar
        android:id="@+id/forgotEmailProgressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumberEditText"
        app:layout_constraintVertical_bias="0.535" />


</androidx.constraintlayout.widget.ConstraintLayout>